--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/vocera_game
-spring.datasource.username=shubham
-spring.datasource.password=Shubham@123
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/rockpaperscissor
+spring.datasource.username=rpsuser
+spring.datasource.password=RockP@perSciss0r
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
