Update to Spring Boot 3.0.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.jakarta.persistence.sharedCache.mode=NONE
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/rockpaperscissor
 spring.datasource.username=rpsuser
 spring.datasource.password=RockP@perSciss0r
