--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.error.whitelabel.enabled=false
+spring.mvc.throw-exception-if-no-handler-found=true
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=NONE
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/rockpaperscissor
