--- a/src/test/resources/application-integration-test.properties
+++ b/src/test/resources/application-integration-test.properties
@@ -2,5 +2,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
 spring.datasource.url=jdbc:h2:mem:testDb
+spring.datasource.username=test
+spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
