--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=NONE
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/rockpaperscissor
-spring.datasource.username=rpsuser
-spring.datasource.password=RockP@perSciss0r
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
